src/timestep/infra/stacks/platform/timestep_ai/templates/ros2-action-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ros2-action-server
  namespace: default
spec:
  selector:
    matchLabels:
      name: ros2-action-server
  template:
    metadata:
      labels:
        name: ros2-action-server
    spec:
      containers:
        # - command:
        #     - tail
        #     - -f
        #     - /dev/null
        - command:
            - /ros_entrypoint.sh
            - ros2
            - run
            - action_tutorials_py
            - fibonacci_action_server
          image: osrf/ros:foxy-desktop
          name: ros2-action-server

# apt-get update && apt-get install -y ros-${ROS_DISTRO}-action-tutorials-cpp ros-${ROS_DISTRO}-action-tutorials-interfaces ros-${ROS_DISTRO}-action-tutorials-py && rm -rf /var/lib/apt/lists/*
# source ros_entrypoint.sh
# ros2 run action_tutorials_py fibonacci_action_server
