src/timestep/infra/stacks/platform/timestep_ai/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: default
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: app
