src/timestep/infra/stacks/platform/timestep_ai/templates/caddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: caddy
  # creationTimestamp: null
  labels:
    app: caddy
  name: caddy
  namespace: default
spec:
  ports:
    - name: "2019"
      port: 2019
      targetPort: 80
  selector:
    app: caddy
status:
  loadBalancer: {}
