src/timestep/infra/stacks/platform/timestep_ai/templates/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
  namespace: default
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    app: client
