src/timestep/infra/stacks/platform/timestep_ai/templates/ollama-cpu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: default
spec:
  type: ClusterIP
  selector:
    name: ollama
  ports:
  - port: 80
    name: http
    targetPort: http
    protocol: TCP
