src/timestep/infra/stacks/platform/timestep_ai/templates/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server
  namespace: default
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
    - port: 9090
      name: metrics
  selector:
    app: server
