src/timestep/infra/stacks/platform/timestep_ai/templates/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  rules:
  - host: example1.timestep.local
    http:
      paths:
      - path: /hello1
        pathType: Prefix
        backend:
          service:
            name: example1
            port:
              number: 8080
      - path: /hello2
        pathType: Prefix
        backend:
          service:
            name: example2
            port:
              number: 8080
  - host: example2.timestep.local
    http:
      paths:
      - path: /hello1
        pathType: Prefix
        backend:
          service:
            name: example1
            port:
              number: 8080
      - path: /hello2
        pathType: Prefix
        backend:
          service:
            name: example2
            port:
              number: 8080
  tls:
  - secretName: ssl-timestep.local
    hosts:
    - example1.timestep.local
    - example2.timestep.local
